--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,3 @@
-html {
-  --color-blue: rgb(0, 2, 117);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -104,7 +100,7 @@ nav {
 }
 
 .nav-link {
-  color: var(--color-blue);
+  color: black;
   transition: all 100ms ease-in-out;
 }
 
@@ -116,7 +112,7 @@ nav {
 #shop {
   padding: 10px 20px;
   background-color: #ffffff65;
-  color: var(--color-blue);
+  color: black;
   transition: all 100ms ease-in-out;
 }
 
@@ -126,7 +122,7 @@ nav {
 }
 
 .fa-shopping-cart {
-  color: var(--color-blue);
+  color: black;
   margin-left: 5px;
 }
 
@@ -184,8 +180,13 @@ nav {
 .fill-right:hover {
   padding: 10px 20px;
   font-weight: bold;
-  background-color: #74EBD5;
-  background-image: linear-gradient(315deg, #74EBD5 0%, #9FACE6 50%, #c34fd5 100%);
+  background-color: #74ebd5;
+  background-image: linear-gradient(
+    315deg,
+    #74ebd5 0%,
+    #9face6 50%,
+    #c34fd5 100%
+  );
   color: white;
   transition-duration: 500ms;
 
